<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adam.ishtapp.Login_Activity">


    <EditText
        android:id="@+id/LoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/TextViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_registred_register_here"
        android:textAlignment="center" />

</LinearLayout>